# carculator_utils

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  MANIFEST.in  environment-dev.yml  requirements.txt  setup.cfg
.github/workflows/: main.yml
carculator_utils/: __init__.py  array.py  background_systems.py  data_management.py  data_transformation.py  dc_column_number.py  driving_cycles.py  energy_consumption.py  export.py  get_data.py  hot_emissions.py  inventory.py  model.py  named_parameters.py  noise_emissions.py  particulates_emissions.py  vehicle_input_parameters.py
carculator_utils/data/: purchase_cost_params.yaml
carculator_utils/data/driving cycle/: dc_specs.yaml
carculator_utils/data/efficiency/: bus.yaml  car.yaml  truck.yaml
carculator_utils/data/emission_factors/: euro_classes.yaml  exhaust_flows.yaml  noise_flows.yaml
carculator_utils/data/export/: rename_parameters.yml  rename_powertrains.yml  simapro-biosphere.json  simapro_blacklist.yml  simapro_fields.yml  simapro_subcompartments.yaml
carculator_utils/data/fuel/: default_fuels.yaml  fuel_specs.yaml
conda/: meta.yaml
docs/: api.rst  conf.py  docs_requirements.txt  index.rst  installation.rst  structure.rst  usage.rst  validity.rst
docs/_static/css/: custom.css
tests/: test_data_management.py  test_driving_cycles.py  test_named_parameters.py
